--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,17 +3,18 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-<h1>Sign In</h1>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-</div>
-<div class="container">
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
+    <h1>Sign In</h1>
+    <div class="col-md-4">
+        {{ wtf.quick_form(form) }}
+        <a href="/register" class="button">注册</a>
     </div>
-    {% endfor %}
-    {% block page_content %}{% endblock %}
-</div>
+    <div class="container">
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% block page_content %}{% endblock %}
+    </div>
 {% endblock %}
